@@ -1,3 +1,9 @@
+2011-06-02  Ira Rosen  <ira.rosen@linaro.org>
+
+	PR tree-optimization/49093
+	* tree-vect-data-refs.c (vect_analyze_data_refs): Fail for volatile
+	data references.
+
 2011-05-19  Quentin Neill  <quentin.neill@amd.com>
 
 	* config/i386/sse.md (fma4_fmsubadd): Use <ssemodesuffix>.
